--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
             <button class="btn-btn" id="muultiply">*</button>
             <button class="btn-btn" id="dot">.</button>
             <button class="btn-btn" id="ans">=</button>
+            <button class="btn-btn" id="parenthesis1">(</button>
+            <button class="btn-btn" id="parenthesis2">)</button>
             <button class="btn-btn" id="clr">Clear</button>
             <button class="btn-btn" id="backspace">&larr;</button>
         </div>
